src/tests/test-src/errors/E65-bad-member-type.syntran
// E65: bad-member-type
// A struct member was initialized with a value of the wrong type

struct S
{
	x: i32,
}

let s = S{x = 1.0};
